Adding serverless backend

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 VITE_API_URL=http://localhost:3001/api
+VITE_ROBOFLOW_API_KEY=your_roboflow_api_key_here
+VITE_ROBOFLOW_MODEL_ID=domino-point-counter-ubn6u/1
+VITE_ROBOFLOW_PROJECT=ali-amr-656xv
