--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,13 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "dev:serverless": "serverless offline",
     "build": "tsc",
     "start": "node dist/server.js",
-    "migrate": "node dist/migrate.js"
+    "migrate": "node dist/migrate.js",
+    "deploy": "npm run build && serverless deploy",
+    "deploy:prod": "npm run build && serverless deploy --stage prod",
+    "logs": "serverless logs -f api -t"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,7 +19,8 @@
     "pg": "^8.11.3",
     "dotenv": "^16.3.1",
     "uuid": "^9.0.1",
-    "@sendgrid/mail": "^8.1.0"
+    "@sendgrid/mail": "^8.1.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -24,6 +29,9 @@
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "serverless": "^3.38.0",
+    "serverless-offline": "^13.3.0",
+    "serverless-dotenv-plugin": "^6.0.0"
   }
 }
